# prog_elso_game

./: CMakeLists.txt  ball.hpp  ball_spawner_block.hpp  block.hpp  block_action.hpp  consts.hpp  graphics.cpp  main.cpp  model.hpp  normal_block.hpp  paddle.hpp  strong_block.hpp  vec2.hpp
include/SDL2/: SDL_blendmode.h  SDL_hints.h  SDL_mouse.h  SDL_pixels.h  SDL_render.h  SDL_surface.h  SDL_ttf.h  SDL_video.h
